# merge-lens

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml  index.html
app/src/: main.rs  state.rs
app/src/components/: conflict_panel.rs  diff_tree.rs  input_panel.rs  merge_output.rs  mod.rs  mode_toggle.rs
crates/merge-lens-core/: Cargo.toml
crates/merge-lens-core/src/: conflict.rs  diff.rs  lib.rs  merge.rs  types.rs
crates/merge-lens-core/tests/: merge.rs  three_way.rs  two_way.rs
crates/merge-lens-core/tests/merge/: test_apply_base.rs  test_apply_custom.rs  test_apply_mine.rs  test_apply_theirs.rs
crates/merge-lens-core/tests/three_way/: mod.rs  test_conflict.rs  test_nested_conflict.rs  test_no_conflict.rs
crates/merge-lens-core/tests/two_way/: test_added.rs  test_array.rs  test_modified.rs  test_nested.rs  test_removed.rs
crates/merge-lens-wasm/: Cargo.toml
crates/merge-lens-wasm/src/: lib.rs
examples/large/: base.json  mine.json  theirs.json
examples/medium/: base.json  mine.json  theirs.json
examples/small/: base.json  mine.json  theirs.json
