[package]
name = "merge-lens-app"
version = "0.1.0"
edition = "2021"

[dependencies]
merge-lens-core = { path = "../crates/merge-lens-core" }
leptos = { version = "0.7", features = ["csr"] }
serde_json = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "File", "FileList", "FileReader", "HtmlInputElement", "HtmlTextAreaElement",
  "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement", "Document", "Window",
  "Navigator", "Clipboard",
] }
